--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "cd front && npm install && npm run dev"
+  command = "cd front && npm install && npm run build"
   publish = "front/.next"
