--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npm run build"
+  command = "cd front && npm install && npm run build"
   publish = "src/.next"
 
 [[redirects]]
