--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "cd front && npm install && npm run build"
-  publish = ".next"
+  publish = "front/.next"
+
 
 [[redirects]]
   from = "/*"
